@@ -17,6 +17,9 @@ JEDIT 4.0 VERSION HISTORY
   higher than the installed jEdit version, the 'Update Plugins' command
   would throw a NullPointerException
 - Fixed stylesheet problem in the PDF output
+- Changing the 'print tab size' setting had no effect
+- Changed tip of the day that mentioned an obsolete version of
+  WheelMouse
 
 * Version 4.0pre8 (a.k.a 4.0 release candidate 1)
 
